--- a/src/StudyPomo.UI/wwwroot/lib/bootstrap/scss/custom.css
+++ b/src/StudyPomo.UI/wwwroot/lib/bootstrap/scss/custom.css
@@ -11860,6 +11860,10 @@ textarea.form-control-lg {
   background-color: #f2f2f2 !important;
   color: #212529 !important;
 }
+[data-bs-theme=light] .nav-link.illuminate.active {
+  background-color: #f2f2f2 !important;
+  color: #212529 !important;
+}
 [data-bs-theme=light] .list-group-item.bg-hover:hover {
   background-color: #f8f9fa;
 }
@@ -12051,6 +12055,10 @@ textarea.form-control-lg {
   color: #dee2e6 !important;
 }
 [data-bs-theme=dark] .nav-link.illuminate:hover {
+  background-color: #2c3237 !important;
+  color: #dee2e6 !important;
+}
+[data-bs-theme=dark] .nav-link.illuminate.active {
   background-color: #2c3237 !important;
   color: #dee2e6 !important;
 }
