--- a/src/StudyPomo.UI/Areas/Identity/Pages/Account/Register.cshtml
+++ b/src/StudyPomo.UI/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,63 +1,36 @@
 ﻿@page
 @model RegisterModel
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "Welcome to StudyPomo";
 }
 
-<div class="row mt-5">
-    <div class="col-md-4">
-        @{
-            if ((Model.ExternalLogins?.Count ?? 0) == 0)
-            {
-            }
-            else
-            {
-                <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                    <div>
-                        <p>
+<div class="container d-flex justify-content-center vh-100">
+    <div class="col-md-8 col-lg-6 mt-5">
+        <div class="p-5">
+            <h2 class="text-center mb-3">@ViewData["Title"]</h2>
+            <p class="text-center text-muted mb-4">Sign in with your google account to get started!</p>
+
+            @{
+                if ((Model.ExternalLogins?.Count ?? 0) > 0)
+                {
+                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="text-center">
+                        <div class="mb-3">
                             @foreach (var provider in Model.ExternalLogins!)
                             {
                                 @if (provider.Name == "Google")
                                 {
-                                    <button type="submit" class="btn btn-secondary w-100" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">
+                                    <button type="submit" class="btn btn-secondary w-100 py-2 fs-5" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">
                                         <i class="bi bi-google me-2"></i> Log in with @provider.DisplayName
                                     </button>
                                 }
                             }
-                        </p>
-                    </div>
-                </form>
-                <div class="d-flex align-items-center justify-content-between">
-                    <div class="flex-fill border border-top-0">
-                    </div>
-                    <span class="mx-2">OR</span>
-                    <div class="flex-fill border border-top-0">
-                    </div>
-                </div>
+                        </div>
+                    </form>
+
+                    <p class="text-center text-muted mb-4">Already have an account? <a asp-area="Identity" asp-page="/Account/Login">Login here.</a></p>
+                }
             }
-        }
-        <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-            <div class="mb-3">
-                <label asp-for="Input.Email" class="form-label">Email</label>
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
-            </div>
-            <div class="mb-3">
-                <label asp-for="Input.Password" class="form-label">Password</label>
-                <input asp-for="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" placeholder="Password" />
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
-            </div>
-            <div class="mb-3">
-                <label asp-for="Input.ConfirmPassword" class="form-label">Confirm Password</label>
-                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div>
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
-            <div class="mt-3">
-                <span class="text-muted">Already have an account? </span><a class="mb-1"asp-page="./Login">Log in</a>
-            </div>
-        </form>
+        </div>
     </div>
 </div>
 
