Collapse navbar at a larger breakpoint & fix table responsiveness

--- a/src/StudyPomo.UI/Pages/Manage/Tasks/Partials/_List.cshtml
+++ b/src/StudyPomo.UI/Pages/Manage/Tasks/Partials/_List.cshtml
@@ -17,7 +17,7 @@
                     <div class="d-none d-md-block col-md-3">
                         <span><strong>Due</strong></span>
                     </div>
-                    <div class="d-none d-lg-block col-md-1">
+                    <div class="d-none d-md-block col-md-1">
                         <span><strong>Course</strong></span>
                     </div>
                     <div class="col-md-1 text-end text-nowrap">
@@ -49,7 +49,7 @@
                         <div class="d-none d-md-block col-md-3">
                             <deadline date="@task.Deadline" display-tz="@Model.TimeZone.Id"></deadline>
                         </div>
-                        <div class="d-none d-lg-block col-md-1">
+                        <div class="d-none d-md-block col-md-1">
                             @if (task.Course != null)
                             {
                                 <badge text="@task.Course.Name" color="@task.Course.HexColor"></badge>
