--- a/src/StudyPomo.UI/Pages/Manage/Courses/All.cshtml
+++ b/src/StudyPomo.UI/Pages/Manage/Courses/All.cshtml
@@ -59,19 +59,19 @@
         <li class="list-group-item bg-body-tertiary">
             <div class="row align-items-center">
                 <div class="d-flex align-items-center justify-content-between">
-                    <div class="col-md-3">
+                    <div class="col-sm-5 col-md-3">
                         <span><strong>Course</strong></span>
                     </div>
-                    <div class="d-none d-md-block col-md-5">
+                    <div class="d-none d-sm-block col-sm-6">
                         <span><strong>Description</strong></span>
                     </div>
                     <div class="d-none d-lg-block col-md-2">
                         <span><strong># of Tasks</strong></span>
                     </div>
-                    <div class="d-none d-lg-block col-md-1">
+                    <div class="d-none d-md-block col-md-1">
                         <span><strong>Status</strong></span>
                     </div>
-                    <div class="col-md-1 text-end text-nowrap">
+                    <div class="col-sm-1 col-md-1 text-end text-nowrap">
                         <span><strong>Actions</strong></span>
                     </div>
                 </div>
@@ -82,18 +82,18 @@
             <li class="list-group-item bg-hover">
                 <div class="row align-items-center">
                     <div class="d-flex align-items-center justify-content-between">
-                        <div class="col-md-3 d-flex flex-nowrap align-items-center">
+                        <div class="col-sm-5 col-md-3 d-flex flex-nowrap align-items-center">
                             <a asp-page="/Manage/Courses/Index" asp-route-id="@course.Id" class="text-decoration-none">
                                 <badge text="@course.Name" color="@course.HexColor"></badge>
                             </a>
                         </div>
-                        <div class="d-none d-md-block col-md-5">
+                        <div class="d-none d-sm-block col-sm-6">
                             <span class="text-muted">@course.Description</span>
                         </div>
                         <div class="d-none d-lg-block col-md-2">
                             <span class="text-muted">@(course.StudyTasks.Count) task(s)</span>
                         </div>
-                        <div class="d-none d-lg-block col-md-1">
+                        <div class="d-none d-md-block col-md-1">
                             @if (course.Archived)
                             {
                                 <span class="badge bg-danger">Archived</span>
@@ -102,7 +102,7 @@
                                 <span class="badge bg-success">Active</span>
                             }
                         </div>
-                        <div class="col-md-1">
+                        <div class="col-sm-1 col-md-1">
                             <div class="d-flex align-items-center justify-content-end">
                                 <div class="dropdown">
                                     <i style="cursor: pointer" class="text-secondary bi bi-three-dots" data-bs-toggle="dropdown" aria-expanded="false"></i>
@@ -132,17 +132,17 @@
         <li class="list-group-item custom-hover">
             <a data-bs-toggle="modal" data-bs-target="#course-create-modal" class="row align-items-center">
                 <div class="d-flex align-items-center justify-content-between">
-                    <div class="col-md-3">
+                    <div class="col-sm-5 col-md-3">
                         <i class="bi bi-plus"></i>
                         <span class="ext-decoration-none text-opacity-50">Add New Course</span>
                     </div>
-                    <div class="d-none d-md-block col-md-5">
+                    <div class="d-none d-sm-block col-sm-6">
                         <span class="text-opacity-50">Description...</span>
                     </div>
                     <div class="d-none d-lg-block col-md-2">
                         <span class="text-opacity-50"># of Tasks...</span>
                     </div>
-                    <div class="d-none d-lg-block col-md-1">
+                    <div class="d-none d-md-block col-md-1">
                         <span class="text-opacity-50">Status...</span>
                     </div>
                     <div class="col-md-1 text-end text-nowrap">
