--- a/src/StudyPomo.UI/Pages/Manage/Labels/Index.cshtml
+++ b/src/StudyPomo.UI/Pages/Manage/Labels/Index.cshtml
@@ -18,16 +18,16 @@
         <li class="list-group-item bg-body-tertiary">
             <div class="row align-items-center">
                 <div class="d-flex align-items-center justify-content-between">
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-6">
                         <span><strong>Label</strong></span>
                     </div>
                     <div class="d-none d-md-block col-md-6">
                         <span><strong>Description</strong></span>
                     </div>
-                    <div class="d-none d-lg-block col-md-2">
+                    <div class="d-none d-sm-block col-md-2 col-sm-5">
                         <span><strong># of Tasks</strong></span>
                     </div>
-                    <div class="col-md-1 text-end text-nowrap">
+                    <div class="col-md-1 text-end text-nowrap col-sm-1">
                         <span><strong>Actions</strong></span>
                     </div>
                 </div>
@@ -38,16 +38,16 @@
             <li class="list-group-item">
                 <div class="row align-items-center">
                     <div class="d-flex align-items-center justify-content-between">
-                        <div class="col-md-3">
+                        <div class="col-md-3 col-sm-6">
                             <badge text="@Model.TaskLabels[i].Name" color="@Model.TaskLabels[i].HexColor"></badge>
                         </div>
                         <div class="d-none d-md-block col-md-6">
                             <span class="text-muted">@Model.TaskLabels[i].Description</span>
                         </div>
-                        <div class="d-none d-lg-block col-md-2">
+                        <div class="d-none d-sm-block col-md-2 col-sm-5">
                             <span class="text-muted">@Model.TaskLabels[i].StudyTasks.Count() task(s)</span>
                         </div>
-                        <div class="col-md-1 text-end text-nowrap">
+                        <div class="col-md-1 text-end text-nowrap col-sm-1">
                             <div class="d-flex align-items-center justify-content-end">
                                 <div class="dropdown">
                                     <i style="cursor: pointer" class="text-secondary bi bi-three-dots" data-bs-toggle="dropdown" aria-expanded="false"></i>
@@ -135,17 +135,17 @@
         <li class="list-group-item custom-hover">
             <a data-bs-toggle="modal" data-bs-target="#addLabelModal" class="row align-items-center">
                 <div class="d-flex align-items-center justify-content-between">
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-6">
                         <i class="bi bi-plus"></i>
                         <span class="ext-decoration-none text-opacity-50">Add New Label</span>
                     </div>
                     <div class="d-none d-md-block col-md-6">
                         <span class="text-opacity-50">Description...</span>
                     </div>
-                    <div class="d-none d-lg-block col-md-2">
+                    <div class="d-none d-sm-block col-md-2 col-sm-5">
                         <span class="text-opacity-50">Count...</span>
                     </div>
-                    <div class="col-md-1 text-end text-nowrap">
+                    <div class="col-md-1 text-end text-nowrap col-sm-1">
                         <span class="text-opacity-50">Actions...</span>
                     </div>
                 </div>
