Fix bug where nav toggle was hidden at wrong breakpoint

--- a/src/StudyPomo.UI/Pages/Shared/_Layout.cshtml
+++ b/src/StudyPomo.UI/Pages/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
                 <div class="d-flex align-items-center">
                     @if (SignInManager.IsSignedIn(User))
                     {
-                        <div :class="pinned ? 'd-block d-md-none' : 'd-block'" class="border rounded-2 me-3" style="padding: 0.1rem 0.4rem" type="button" data-bs-toggle="offcanvas" data-bs-target="#navOffcanvas" aria-controls="navOffcanvas">
+                        <div :class="pinned ? 'd-block d-lg-none' : 'd-block'" class="border rounded-2 me-3" style="padding: 0.1rem 0.4rem" type="button" data-bs-toggle="offcanvas" data-bs-target="#navOffcanvas" aria-controls="navOffcanvas">
                             <i class="bi bi-list" style="font-size: 1.2rem"></i>
                         </div>
                     }
