--- a/src/StudyPomo.UI/Pages/Manage/Courses/All.cshtml
+++ b/src/StudyPomo.UI/Pages/Manage/Courses/All.cshtml
@@ -62,7 +62,7 @@
                     <div class="col-sm-5 col-md-3">
                         <span><strong>Course</strong></span>
                     </div>
-                    <div class="d-none d-sm-block col-sm-6">
+                    <div class="d-none d-sm-block col-sm-6 col-md-5">
                         <span><strong>Description</strong></span>
                     </div>
                     <div class="d-none d-lg-block col-md-2">
@@ -87,7 +87,7 @@
                                 <badge text="@course.Name" color="@course.HexColor"></badge>
                             </a>
                         </div>
-                        <div class="d-none d-sm-block col-sm-6">
+                        <div class="d-none d-sm-block col-sm-6 col-md-5">
                             <span class="text-muted">@course.Description</span>
                         </div>
                         <div class="d-none d-lg-block col-md-2">
@@ -136,7 +136,7 @@
                         <i class="bi bi-plus"></i>
                         <span class="ext-decoration-none text-opacity-50">Add New Course</span>
                     </div>
-                    <div class="d-none d-sm-block col-sm-6">
+                    <div class="d-none d-sm-block col-sm-6 col-md-5">
                         <span class="text-opacity-50">Description...</span>
                     </div>
                     <div class="d-none d-lg-block col-md-2">
