fix: update template row column widths for task tables

--- a/src/StudyPomo.UI/Pages/Manage/Tasks/Partials/_List.cshtml
+++ b/src/StudyPomo.UI/Pages/Manage/Tasks/Partials/_List.cshtml
@@ -104,20 +104,18 @@
                 <li class="list-group-item custom-hover">
                     <a data-bs-toggle="modal" data-bs-target="#study-task-create-modal" class="row align-items-center">
                         <div class="d-flex align-items-center justify-content-between">
-                            <div class="col-md-5">
+                            <div class="col-md-5 d-flex flex-nowrap align-items-center">
                                 <i class="bi bi-plus"></i>
                                 <span class="ext-decoration-none text-opacity-50">Add New Task</span>
                             </div>
                             <div class="d-none d-md-block col-md-3">
                                 <span class="text-opacity-50">Due...</span>
                             </div>
-                            <div class="d-none d-lg-block col-md-1">
-                                <span class="text-opacity-50">Priority...</span>
-                            </div>
-                            <div class="d-none d-lg-block col-md-1">
+                            <div class="d-none d-md-block col-md-1">
                                 <span class="text-opacity-50">Course...</span>
                             </div>
                             <div class="col-md-1 text-end text-nowrap">
+                                Actions...
                             </div>
                         </div>
                     </a>
