--- a/src/StudyPomo.UI/Pages/Manage/Index.cshtml
+++ b/src/StudyPomo.UI/Pages/Manage/Index.cshtml
@@ -347,7 +347,7 @@
             <li class="list-group-item custom-hover">
                 <a data-bs-toggle="modal" data-bs-target="#study-task-create-modal" class="row align-items-center">
                     <div class="d-flex align-items-center justify-content-between">
-                        <div class="col-md-5">
+                        <div class="col-md-5 d-flex flex-nowrap align-items-center">
                             <i class="bi bi-plus"></i>
                             <span class="ext-decoration-none text-opacity-50">Add New Task</span>
                         </div>
@@ -357,7 +357,8 @@
                         <div class="d-none d-lg-block col-md-1">
                             <span class="text-opacity-50">Course...</span>
                         </div>
-                        <div class="col-md-2 text-end text-nowrap">
+                        <div class="col-md-1 text-end">
+                            Actions...
                         </div>
                     </div>
                 </a>
