--- a/src/StudyPomo.UI/Pages/Shared/_Layout.cshtml
+++ b/src/StudyPomo.UI/Pages/Shared/_Layout.cshtml
@@ -163,7 +163,13 @@
                                             <h5 class="offcanvas-title" id="nav-offcanvas-label">studypomo</h5>
                                             <a class="small text-muted" asp-area="Identity" asp-page="/Account/Manage/Index"><i class="bi bi-person-fill me-1"></i>@UserManager.GetUserName(User)</a>
                                         </div>
-                                        <i x-on:click="pinned = true" style="cursor: pointer;" class="mt-2 d-none d-lg-block" :class="pinned ? 'bi bi-pin-fill' : 'bi bi-pin'" data-bs-dismiss="offcanvas"></i>
+                                        <i 
+                                          x-on:click="pinned = true" 
+                                          style="cursor: pointer; padding: 6px 10px 6px 10px;" 
+                                          class="mt-2 mb-auto d-none d-lg-block pin-icon" 
+                                          :class="pinned ? 'bi bi-pin-fill' : 'bi bi-pin'" 
+                                          data-bs-dismiss="offcanvas">
+                                        </i>
                                     </div>
 
 
